 * Removed deprecated OptimizationResult::getLagrangeMultipliers, OptimizationAlgorithm::computeLagrangeMultipliers
 * Removed deprecated FittingTest::Kolmogorov, FittingTest::BestModelKolmogorov (DistributionFactory argument only)
 * Moved Sample::computeStandardDeviationPerComponent, to computeStandardDeviation

=== Documentation ===

=== Python module ===
 * Serialize Python wrapper objects using dill (PythonDistribution, PythonFunction ...)

=== Miscellaneous ===

=== Bug fixes ===
 * #1661 (XMLH5StorageManager does not store IndicesCollection into HDF5 files)
 * #1662 (Operator() of a CovarianceModel with multidimensional output should yield object of type SquareMatrix)
 * #1680 (QuadraticBasisFactory multiplies cross products by 2)


== 1.16 release (2020-11-16) == #release-1.16

=== Library ===

==== Major changes ====
 * Drop normalization in KrigingAlgorithm
 * Drop normalization & transformation handling in GeneralLinearModelAlgorithm
 * XML/H5 storage (hdf5 library)
 * C++11 requirement

==== New classes ====
 * BlockIndependentDistribution
 * FejerAlgorithm
 * GridLayout
 * MinimumVolumeClassifier
 * StationaryFunctionalCovarianceModel
 * XMLH5StorageManager

==== API changes ====
 * Removed deprecated Weibull, WeibullFactory, WeibullMuSigma classes
 * Removed deprecated GumbelAB class
 * Removed deprecated Event class
 * Removed deprecated EnumerateFunction constructors
 * Removed various deprecated distribution accessors
 * Deprecated Pairs class, see VisualTest.DrawPairs
 * Deprecated SORMResult::getEventProbabilityHohenBichler, use SORMResult::getEventProbabilityHohenbichler instead
 * Deprecated SORMResult::getGeneralisedReliabilityIndexHohenBichler, use SORMResult::getGeneralisedReliabilityIndexHohenbichler instead
 * Renamed SobolSequence::MaximumNumberOfDimension as SobolSequence::MaximumDimension
 * Added VisualTest::DrawLinearModel(linearModelResult), useful if the test is performed on the training samples