@@ -74,6 +74,11 @@ CovarianceModel KarhunenLoeveResult::getCovarianceModel() const
 }
 
 /* Eigenvalues accessor */
+Point KarhunenLoeveResult::getEigenvalues() const
+{
+  return getImplementation()->getEigenvalues();
+}
+
 Point KarhunenLoeveResult::getEigenValues() const
 {
   return getImplementation()->getEigenValues();
