@@ -9,7 +9,7 @@ model = ot.AbsoluteExponential([1.0])
 sample = ot.GaussianProcess(model, mesh).getSample(100)
 algo = ot.KarhunenLoeveSVDAlgorithm(sample, threshold)
 algo.run()
-ev = algo.getResult().getEigenValues()
+ev = algo.getResult().getEigenvalues()
 modes = algo.getResult().getScaledModesAsProcessSample()
 g = modes.drawMarginal(0)
 g.setXTitle("$t$")
