@@ -8,7 +8,7 @@ cov1D = ot.AbsoluteExponential([1.0])
 algo = ot.KarhunenLoeveP1Algorithm(mesh, cov1D, 0.0)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
@@ -28,7 +28,7 @@ cov2D = ot.ExponentialModel(scale, amplitude, R)
 algo = ot.KarhunenLoeveP1Algorithm(mesh, cov2D, 0.0)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
