@@ -14,7 +14,7 @@ sample = ot.GaussianProcess(cov1D, mesh).getSample(16)
 algo = ot.KarhunenLoeveSVDAlgorithm(sample, 0.0)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
@@ -29,7 +29,7 @@ sample = ot.GaussianProcess(cov1D, mesh).getSample(6)
 algo = ot.KarhunenLoeveSVDAlgorithm(sample, 0.0)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
@@ -43,7 +43,7 @@ print("KL lift as field=", result.liftAsField(coefficients[0]))
 algo = ot.KarhunenLoeveSVDAlgorithm(sample, 0.0, True)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
@@ -58,7 +58,7 @@ weights = mesh.computeWeights()
 algo = ot.KarhunenLoeveSVDAlgorithm(sample, weights, 0.0, True)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
@@ -77,7 +77,7 @@ sample = ot.GaussianProcess(cov2D, mesh).getSample(6)
 algo = ot.KarhunenLoeveSVDAlgorithm(sample, 0.0)
 algo.run()
 result = algo.getResult()
-lambd = result.getEigenValues()
+lambd = result.getEigenvalues()
 KLModes = result.getModesAsProcessSample()
 print("KL modes=", KLModes)
 print("KL eigenvalues=", lambd)
