@@ -15,6 +15,7 @@
  * Removed deprecated OptimizationResult::getLagrangeMultipliers, OptimizationAlgorithm::computeLagrangeMultipliers
  * Removed deprecated FittingTest::Kolmogorov, FittingTest::BestModelKolmogorov (DistributionFactory argument only)
  * Moved Sample::computeStandardDeviationPerComponent, to computeStandardDeviation
+ * Deprecated KarhunenLoeveResult::getEigenValues, use getEigenvalues
 
 === Documentation ===
 
